--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "mongoose": "^9.1.6",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
