--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.563.0",
     "mongoose": "^9.1.6",
     "next": "16.1.6",
